# tiny-ott

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  dprint.json
.github/workflows/: ci.yml
examples/: demo.ott  demo.rs  prelude.ott
src/: diagnostics.rs  driver.rs  elab.rs  errors.rs  eval.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.lalrpop  parser.rs  pretty.rs  syntax.rs  value.rs
tests/: smoke.rs  snapshots.rs
tests/cases/: 01_identity.ott  02_refl_nat.ott  03_refl_bool.ott  04_funext.ott  05_pair_eq.ott  06_coe_identity.ott  07_disequal_nat.ott  08_natrec.ott  09_boolrec.ott  10_proof_irrelevance.ott  11_eta_pi.ott  12_eq_compute.ott  13_let.ott  14_arith_compute.ott  15_bool_ops.ott  16_compose.ott  17_negation.ott  18_polymorphism.ott  19_factorial.ott  20_sigma_projections.ott  21_dep_sigma.ott  22_check_decl.ott  23_err_type_mismatch.ott  24_err_unbound.ott  25_err_refl_disequal.ott  26_tag_color.ott  27_eq_type_canonical.ott  28_coe_pi.ott  29_irrel_print.ott  30_subst_coh.ott
tests/snapshots/: cases@01_identity.ott.snap  cases@02_refl_nat.ott.snap  cases@03_refl_bool.ott.snap  cases@04_funext.ott.snap  cases@05_pair_eq.ott.snap  cases@06_coe_identity.ott.snap  cases@07_disequal_nat.ott.snap  cases@08_natrec.ott.snap  cases@09_boolrec.ott.snap  cases@10_proof_irrelevance.ott.snap  cases@11_eta_pi.ott.snap  cases@12_eq_compute.ott.snap  cases@13_let.ott.snap  cases@14_arith_compute.ott.snap  cases@15_bool_ops.ott.snap  cases@16_compose.ott.snap  cases@17_negation.ott.snap  cases@18_polymorphism.ott.snap  cases@19_factorial.ott.snap  cases@20_sigma_projections.ott.snap  cases@21_dep_sigma.ott.snap  cases@22_check_decl.ott.snap  cases@23_err_type_mismatch.ott.snap  cases@24_err_unbound.ott.snap  cases@25_err_refl_disequal.ott.snap  cases@26_tag_color.ott.snap  cases@27_eq_type_canonical.ott.snap  cases@28_coe_pi.ott.snap  cases@29_irrel_print.ott.snap  cases@30_subst_coh.ott.snap
